# awaria-cpp

./: .clang-format  .gitignore  CMakeLists.txt  a.harm.json  gui.cpp  gui.h
src/: IconsFontAwesome6.h  Texture2d.hpp  dataclasses.hpp  fa.h  icon.png.cpp  icon.png.hpp  main.cpp  static.cpp
src/ui/: CompGlobals.cpp  Components.hpp  Components_internal.hpp  MainPanel.cpp  Menu.cpp  SidePanel.cpp  Style.cpp  Style.hpp  TableRow.cpp
